--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,31 @@
 name: notebooks
 channels:
+  - plotly
+  - kthohr
+  - simplect
+  - conda-forge
   - defaults
 dependencies:
-  - pandas
-  - matplotlib
-  - scikit-learn
-  - seaborn
-  - statsmodels
-  - gcem
-  - libiconv
-  - cython
-  - ipycanvas
-  - pyarrow
-  - tensorflow
-  - feedparser
-  - sqlalchemy
-  - ipython-sql
+  - cython=0.29.21
+  - dash=1.4.1
+  - ipycanvas=0.5.1
+  - ipython-sql=0.3.9
+  - ipywidgets=7.5.1
+  - jupyter-dash=0.3.0
+  - matplotlib=3.3.1
+  - numpy=1.19.1
+  - pandas=1.1.1
+  - pillow=7.2.0
+  - pip=20.2.2
+  - pyarrow=1.0.1
+  - requests=2.24.0
+  - requests-oauthlib=1.3.0
+  - scikit-learn=0.23.2
+  - scipy=1.5.2
+  - seaborn=0.10.1
+  - sqlalchemy=1.3.19
+  - tensorflow=2.2.0
+  - pip:
+    - boto3==1.15.8
+    - duckdb==0.2.1
+    - streamlit==0.67.1
