--- a/Rambam/.gitignore
+++ b/Rambam/.gitignore
@@ -1,5 +1,5 @@
 # Dont commit raw mdb files
-data/raw/HomeHospital/database
+# data/raw/HomeHospital/database
 data/raw/HomeHospital_visits_return/visits\ return.mdb
 
 # Notebooks
